# decide

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: decide.cpp  decide.h  main.cpp
test/: CMVTest.cpp  CMVTest.h  example_input.txt
